--- a/CKAN-Modernization-20250721/ckan-monorepo/ckan/ckan/templates-midnight-blue/user/dashboard.html
+++ b/CKAN-Modernization-20250721/ckan-monorepo/ckan/ckan/templates-midnight-blue/user/dashboard.html
@@ -20,6 +20,9 @@
       {{ nav.link(h.url_for('dashboard.datasets'), h.humanize_entity_type('package', dataset_type, 'my label') or _('My Datasets'), icon='sitemap') }}
       {{ nav.link(h.url_for('dashboard.organizations'), h.humanize_entity_type('organization', org_type, 'my label') or _('My Organizations'), icon='briefcase') }}
       {{ nav.link(h.url_for('dashboard.groups'), h.humanize_entity_type('group', group_type, 'my label') or _('My Groups'), icon='users') }}
+      {% if c.userobj %}
+        {{ nav.link(h.url_for('dashboard.analytics'), _('Analytics'), icon='bar-chart') }}
+      {% endif %}
     {% endblock dashboard_nav_links %}
   </ul>
 {% endblock secondary_content %}
